Second commit.3 — polished (AI assisted)